Day-48/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-app
  labels:
    environment: production
    managed-by: kubernetes
