Day-48/k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-service
  namespace: go-app
  labels:
    app: go-k8s-app
spec:
  type: ClusterIP
  selector:
    app: go-k8s-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-nodeport
  namespace: go-app
  labels:
    app: go-k8s-app
spec:
  type: NodePort
  selector:
    app: go-k8s-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
